--- a/Meal shop/menu.html
+++ b/Meal shop/menu.html
@@ -9,10 +9,15 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href = "menu.css" rel = "stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Patua+One&family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     </head>
 </head>
-<body class="content">
 
+<body class="content">
+<script src = "menu.js"></script>
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand text-warning" href="Home page.html">Hazeem burger</a>
@@ -55,8 +60,146 @@
       </div>
     </div>
   </nav>
+  <div class = "Categories">
+    <a  href = "menu.html" class = "active">Burgers</a>
+    <a  href = "Sides.html">Sides</a>
+    <a  href = "#">Drinks</a>
+    <a  href = "#">Sauces</a>
+    <a  href = "#">Desserts</a>
+    <a  href = "#">Meals</a>
+  </div>
   <div class = "food">
    <h1 class = "text-center text-capitalize fw-bold" style = "margin-top:5%;"><span class = "text-dark">Explore</span><span style = "color:darkred"> Menu</h1>
+    <br><br><br>
+  </div>
+  <div class = "menu_container">
+  <div class = "Cheezy_bluster_hover">
+  <div class = "Cheezy_bluster">
+  <img src = "photo/Cheezy Bluster (2).png" class = "me-3 position-relative" alt = "Cheezy Bluster">
+  <div class = "bg-white p-2">
+  <h1 class = "text-warning" style = "font-size:90%;text-align:center;">Cheezy Bluster</h1>
+  <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Melted cheese and crispy beef in a golden bun delight.</h2>
+  <h3 class = "text-danger fs-6">$5.49</h3>
+  </div>
+  </div>
+  </div>
+  <div class = "ultimate_burger_hover">
+  <div class = "ultimate_burger">
+  <img src = "photo/Burger_ultimate-removebg-preview.png" class = "me-3 position-relative" alt = "Burger Ultimate">
+  <div class = "bg-white p-2">
+  <h1 class = "text-warning" style = "font-size:90%;text-align:center;">Burger Ultimate</h1>
+  <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Juicy beef, melted cheese, and smoky flavor perfection.</h2>
+  <h3 class = "text-danger fs-6">$6.99</h3>
+  </div>
+  </div>
+  </div>
+  <div class = "Urdaburger_hover">
+  <div class = "Urdaburger">
+  <img src = "photo/Urdaburger-removebg-preview.png" class = "me-3 position-relative" alt = "Urdaburger">
+  <div class = "bg-white p-2">
+  <h1 class = "text-warning" style = "font-size:90%;text-align:center">Urdaburger</h1>
+  <h2  style = "font-size:9.5px;text-align:right;color:rgb(173, 173, 173);">Tender beef, fresh herbs, and creamy urda cheese blend.</h2>
+  <h3 class ="text-danger fs-6">$5.49</h3>
+  </div>
+  </div>
+  </div>
+  <div class = "Turkey_Burgers_hover">
+  <div class = "Turkey_Burgers">
+  <img src = "photo/Turkey_Burgers-removebg-preview.png" class = "me-3 position-relative" alt ="Turkey Burger">
+  <div class = "bg-white p-2">
+    <h1 class ="text-warning" style = "font-size:90%;text-align:center">Turkey Burger</h1>
+    <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Juicy turkey patty with herbs, lettuce, and light mayo.</h2>
+    <h3 class ="text-danger fs-6">$4.99</h3>
+  </div>
+  </div>
+  </div>
+  </div>
+  <br><br><br><br><br><br>
+  <div class = "menu_container">
+    <div class ="Veggie_Burgers_hover">
+   <div class = "Veggie_Burgers">
+    <img src = "photo/Ultimate_veggie_burgers-removebg-preview.png" class = "me-3 position-relative" alt = "Ultimate veggie burger">
+  <div class = "bg-white p-2">
+    <h1 class = "text-warning" style = "font-size:90%;text-align:center">Veggie burger</h1>
+    <h2  style = "font-size:9.5px;text-align:right;color:rgb(173, 173, 173);">Fresh veggie patty with lettuce, tomato, and special sauce.</h2>
+    <h3 class = "text-danger fs-6">$3.89</h3>
+  </div>
+  </div>
+    </div>
+  <div class = "Hatch_Burger_hover">
+  <div class = "Hatch_Burger">
+    <img src = "photo/Hatch_Chile_Smash_Burger-removebg-preview.png" class = "me-3 position-relative" alt = "Hatch Chile Smach Burger">
+    <div class = "bg-white p-2">
+      <h1 class = "text-warning" style = "font-size:90%;text-align:center">Hatch Burger</h1>
+      <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Juicy beef with Hatch green chiles and melted cheese.</h2>
+      <h3 class = "text-danger fs-6">$4.25</h3>
+    </div>
+  </div>
+  </div>
+  <div class = "Yuzu_Burger_hover">
+  <div class = "Yuzu_Burger">
+    <img src = "photo/Japanese_Burger-removebg-preview.png" class = "m-3 position-relative" alt = "Yuzu Burger">
+    <div class = "bg-white p-2">
+      <h1 class = "text-warning" style = "font-size:90%;text-align:center">Yuzu Burger</h1>
+      <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Tender chicken with citrusy yuzu mayo and crisp lettuce.</h2>
+      <h3 class = "text-danger fs-6">$4.75</h3>
+    </div>
+  </div>
+  </div>
+  <div class = "Rajma_Burger_hover">
+  <div class = "Rajma_Burger">
+    <img src = "photo/Rajma_Burger-removebg-preview.png" class = "m-3 position-relative" alt = "Rajma Burger">
+    <div class = "bg-white p-2">
+      <h1 class = "text-warning" style = "font-size:90%;text-align:center">Rajma Burger</h1>
+      <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Spiced red bean patty with tangy chutney and fresh veggies.</h2>
+      <h3 class = "text-danger fs-6">$3.90</h3>
+    </div>
+  </div>
+  </div>
+  </div>
+  <br><br><br><br><br><br>
+  <div class = "menu_container">
+  <div class = "Frico_Crunch_hover">
+   <div class = "Frico_Crunch">
+    <img src = "photo/Frico Crunch.png" class = "m-3 position-relative" alt = "Frico Crunch">
+    <div class = "bg-white p-2">
+      <h1 class = "text-warning" style = "font-size:90%;text-align:center">Frico Crunch</h1>
+      <h2  style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Crispy cheese crust with juicy beef and creamy sauce.</h2>
+      <h3 class = "text-danger fs-6">$4.25</h3>
+    </div>
+   </div>
+  </div>
+  
+  <div class = "Smach_Fire_hover">
+  <div class = "Smash_Fire">
+    <img src = 'photo/onion_smash_burger-removebg-preview.png' class = "m-3 position-relative" alt = "Smash Fire">
+    <div class = "bg-white p-2">
+      <h1 class ="text-warning" style = "font-size:90%;text-align:center">Smash Fire</h1>
+      <h2  style = "font-size:10px;text-align:right;color:rgb(173, 173, 173);">Spicy beef patty with fiery sauce and melted cheese.</h2>
+      <h3 class = "text-danger fs-6">$5.50</h3>
+    </div>
+  </div>
+  </div>
+  <div class = "Sesame_Smash_hover">
+  <div class = "Sesame_Smash">
+   <img src = "photo/Sesame_Smash-removebg-preview.png" class = 'm-3 position-relative' alt = "Sesame Smash">
+   <div class = "bg-white p-2">
+    <h1 class ="text-warning" style = "font-size:90%;text-align:center">Sesame Smash</h1>
+    <h2 style = "font-size:10px;text-align:right;color:rgb(173, 173, 173)">Crispy sesame coated beef patty with fresh toppings.</h2>
+    <h3 class ="text-danger fs-6">$5.25</h3>
+   </div>
+  </div>
+  </div>
+  <div class = "Chicken_Burgers_hover">
+  <div class = "Chicken_Burgers">
+    <img src = 'photo/Chicken_Burgers-removebg-preview.png' class = "m-3 position-relative" alt = "Chicken Burger">
+    <div class = "bg-white p-2">
+      <h1 class = "text-warning" style = "font-size:90%;text-align:center">Chicken Burgers</h1>
+      <h2 style = "font-size:9px;text-align:right;color:rgb(173, 173, 173);">Juicy grilled chicken with lettuce, tomato, and mayo.</h2>
+      <h3 class = "text-danger fs-6">$4.50</h3>
+    </div>
+  </div>
+  </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
